--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ services:
 before_script:
   - docker -v
   - docker-compose -v
-  - docker-compose build docker-demo-app docker-demo-app-tests
-script: docker-compose run --rm -e "CODECLIMATE_REPO_TOKEN=$CODECLIMATE_REPO_TOKEN" docker-demo-app-tests
+  - docker-compose build
+script: docker-compose run --rm tests-ci
 after_success:
   - docker images
 deploy:
