--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6",
-        "squizlabs/php_codesniffer": "^2.6"
+        "squizlabs/php_codesniffer": "^2.6",
+        "symfony/filesystem": "^3",
+        "symfony/finder": "^3"
     },
     "autoload": {
         "psr-4": {
