--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '2'
 services:
-  sapi-merged-export:
+  dev:
     build: .
     image: keboola/docker-demo-app
     tty: true
     stdin_open: true
-    command: sh -c 'composer install && php vendor/bin/phpunit'
+    command: sh -c 'composer install && php vendor/bin/phpcs --standard=psr2 -n --ignore=vendor --extensions=php . && php vendor/bin/phpunit'
     volumes:
       - ./:/code
   tests-ci:
     image: keboola/docker-demo-app
-    command: ./tests/run.sh
+    command: sh -c 'composer install && php vendor/bin/phpcs --standard=psr2 -n --ignore=vendor --extensions=php . && php vendor/bin/phpunit'
