--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "phpunit/phpunit": "^6",
         "squizlabs/php_codesniffer": "^2.6",
         "symfony/filesystem": "^3",
-        "symfony/finder": "^3"
+        "symfony/finder": "^3",
+        "symfony/process": "^3"
     },
     "autoload": {
         "psr-4": {
