--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   dev:
     build: .
     image: keboola/docker-demo-app
+    mem_limit: 64m
     tty: true
     stdin_open: true
     command: sh -c 'composer install && php vendor/bin/phpcs --standard=psr2 -n --ignore=vendor --extensions=php . && php vendor/bin/phpunit'
