--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,5 @@ services:
     volumes:
       - ./:/code
   tests-ci:
-    image: keboola/docker-demo-app
+    image: keboola/sapi-merged-export
     command: sh -c 'composer install && php vendor/bin/phpcs --standard=psr2 -n --ignore=vendor --extensions=php . && php vendor/bin/phpunit'
