--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,9 +8,9 @@
          processIsolation="false"
          stopOnFailure="false"
          syntaxCheck="false"
-         bootstrap="bootstrap.php">
+         bootstrap="tests/bootstrap.php">
 
-    <testsuite name="Docker Demo App Test">
+    <testsuite name="unit">
         <directory>tests</directory>
     </testsuite>
 
