--- a/composer.json
+++ b/composer.json
@@ -4,18 +4,19 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.1"
+        "php": "^7.4",
+        "keboola/php-component": "^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6",
-        "squizlabs/php_codesniffer": "^2.6",
-        "symfony/filesystem": "^3",
-        "symfony/finder": "^3",
-        "symfony/process": "^3"
+        "phpunit/phpunit": "^9.5",
+        "symfony/filesystem": "^4.4",
+        "symfony/finder": "^4.4",
+        "symfony/process": "^4.4",
+        "keboola/coding-standard": "^14.0"
     },
     "autoload": {
         "psr-4": {
-            "Keboola\\": "src/Keboola/"
+            "Keboola\\SapiMergedExport\\": "src/"
         }
     },
     "scripts": {
@@ -33,5 +34,10 @@
             "@composer validate --no-check-all --strict",
             "@build"
         ]
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
